examples/type_system/failing/173_perform_missing_dot.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let x = perform IO print("hi")
let after = 1
